# test-sentry-sdk-socks-transport

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
sentry_test/: main.py
sentry_test/sentry_socks5_transport/: transport.py
tests/: test_sentry_test.py
